--- a/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/AbsenceDetailsControlStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/AbsenceDetailsControlStyles.xaml
@@ -34,7 +34,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
     <Style TargetType="{x:Type customControls:AbsenceDetailsControl}">
-        <Setter Property="Foreground" Value="#F9F1A5" />
+        <Setter Property="Foreground" Value="{StaticResource AbsenceBrush}" />
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
@@ -53,7 +53,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             DockPanel.Dock="Left"
                             Margin="0 0 10 0"
                             Visibility="{Binding HasOfficialHolidays, RelativeSource={RelativeSource TemplatedParent} , Converter={StaticResource BooleanToVisibilityConverter}}"
-                            IconForeground="Chocolate"
+                            IconForeground="{StaticResource SprintCalendarInfoIconBrush}"
                             IconGeometry="{StaticResource FourDotsIconGeometry}">
 
                             <customControls:InfoPoint.InfoContent>
