--- a/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/PanelWithTitleStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/PanelWithTitleStyles.xaml
@@ -49,7 +49,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             Visibility="{TemplateBinding Title, Converter={StaticResource NullToVisibilityConverter}}">
 
                             <ContentPresenter
-                                Content="{TemplateBinding Title}"
+                                ContentSource="Title"
                                 Margin="0 0 0 2">
 
                                 <ContentPresenter.Resources>
