--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintOverview/SprintOverviewView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintOverview/SprintOverviewView.xaml
@@ -177,7 +177,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                     <Border
                         BorderThickness="0 0 0 4"
-                        BorderBrush="{StaticResource PrimaryLightBrush}"
+                        BorderBrush="{StaticResource BorderBrush}"
                         Grid.Row="0"
                         Grid.Column="0">
 
@@ -191,7 +191,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                     <Border
                         BorderThickness="0 0 0 4"
-                        BorderBrush="{StaticResource PrimaryLightBrush}"
+                        BorderBrush="{StaticResource BorderBrush}"
                         Grid.Row="0"
                         Grid.Column="1">
 
@@ -205,7 +205,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                     <Border
                         BorderThickness="0 0 0 4"
-                        BorderBrush="{StaticResource PrimaryLightBrush}"
+                        BorderBrush="{StaticResource BorderBrush}"
                         Grid.Row="0"
                         Grid.Column="2">
 
@@ -213,7 +213,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             Text="After Close"
                             HorizontalAlignment="Center"
                             Margin="0 0 0 3"
-                            FontSize="24" />
+                            FontSize="24"
+                            FontWeight="DemiBold" />
 
                     </Border>
 
