--- a/sources/VeloCity.Wpf.Presentation/TeamMembersArea/TeamMembersList/TeamMembersListControl.xaml
+++ b/sources/VeloCity.Wpf.Presentation/TeamMembersArea/TeamMembersList/TeamMembersListControl.xaml
@@ -83,61 +83,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                     Background="Transparent"
                                     MinHeight="40">
 
-                                    <VisualStateManager.VisualStateGroups>
-
-                                        <VisualStateGroup x:Name="CommonStates">
-                                            <VisualState x:Name="Normal" />
-                                        </VisualStateGroup>
-
-                                        <VisualStateGroup x:Name="SelectionStates">
-
-                                            <VisualState x:Name="Unselected" />
-
-                                            <VisualState x:Name="Selected">
-                                                <Storyboard>
-
-                                                    <ColorAnimationUsingKeyFrames
-                                                        Storyboard.TargetName="PART_Border"
-                                                        Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
-
-                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource AccentColor}" />
-                                                    </ColorAnimationUsingKeyFrames>
-
-                                                    <ColorAnimationUsingKeyFrames
-                                                        Storyboard.TargetName="TextBlock1"
-                                                        Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
-
-                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontPrimaryColor}" />
-                                                    </ColorAnimationUsingKeyFrames>
-
-                                                </Storyboard>
-                                            </VisualState>
-
-                                            <VisualState x:Name="SelectedUnfocused">
-                                                <Storyboard>
-
-                                                    <ColorAnimationUsingKeyFrames
-                                                        Storyboard.TargetName="PART_Border"
-                                                        Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
-
-                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource PrimaryLightColor}" />
-                                                    </ColorAnimationUsingKeyFrames>
-
-                                                    <ColorAnimationUsingKeyFrames
-                                                        Storyboard.TargetName="TextBlock1"
-                                                        Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
-
-                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontPrimaryColor}" />
-                                                    </ColorAnimationUsingKeyFrames>
-
-                                                </Storyboard>
-                                            </VisualState>
-
-                                        </VisualStateGroup>
-                                    </VisualStateManager.VisualStateGroups>
-
                                     <TextBlock
-                                        x:Name="TextBlock1"
+                                        x:Name="PART_Title"
                                         Text="{Binding}"
                                         Margin="15 5">
 
@@ -155,6 +102,42 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                     </TextBlock>
 
                                 </Border>
+
+                                <ControlTemplate.Triggers>
+
+                                    <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="IsSelected" Value="True" />
+                                            <Condition Property="Selector.IsSelectionActive" Value="True" />
+                                        </MultiTrigger.Conditions>
+                                        <MultiTrigger.Setters>
+                                            <Setter TargetName="PART_Border" Property="Background" Value="{StaticResource AccentBrush}" />
+                                            <Setter TargetName="PART_Title" Property="Foreground" Value="{StaticResource FontAccentBrush}" />
+                                        </MultiTrigger.Setters>
+                                    </MultiTrigger>
+
+                                    <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="IsSelected" Value="True" />
+                                            <Condition Property="Selector.IsSelectionActive" Value="False" />
+                                        </MultiTrigger.Conditions>
+                                        <MultiTrigger.Setters>
+                                            <Setter TargetName="PART_Border" Property="Background" Value="{StaticResource PrimaryLightBrush}" />
+                                        </MultiTrigger.Setters>
+                                    </MultiTrigger>
+
+                                    <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="IsSelected" Value="False" />
+                                            <Condition Property="IsMouseOver" Value="True" />
+                                        </MultiTrigger.Conditions>
+                                        <MultiTrigger.Setters>
+                                            <Setter TargetName="PART_Border" Property="Background" Value="{StaticResource PrimaryLightBrush}" />
+                                        </MultiTrigger.Setters>
+                                    </MultiTrigger>
+
+
+                                </ControlTemplate.Triggers>
 
                             </ControlTemplate>
                         </Setter.Value>
